# pytriton_server_template

./: .gitignore  Dockerfile  README.md  en-README.md  main.py  pyproject.toml  start.sh
.gitea/workflows/: ci.yaml
src/: app.py  client.py  mock_app.py  server.py
src/tests/: fastapi_locust.py
